# Parachain-with-xtokens

./: 2000plain-parachain-chainspec.json  2001-plain-parachain-chainspec.json  para-2000-genesis-state  para-2001-genesis-state  para-2001-wasm  plain-global-parachain-chainspec.json  plain-parachain-chainspec.json  raw-2000-parachain-chainspec.json  raw-2001-parachain-chainspec.json  raw-global-parachain-chainspec.json  raw-parachain-chainspec.json
node/src/: chain_spec.rs
pallets/test-utils/: Cargo.toml
pallets/traits2/: Cargo.toml
primitives/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs  xcm_config.rs
runtime/src/weights/: mod.rs
