[package]
name = "primitives"
version = "0.1.0"
authors = ["GalacticCouncil"]
edition = "2021"
repository = "https://github.com/galacticcouncil/HydraDX-node"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { features = ["derive"], optional = true, version = "1.0.136" }
hex-literal = {version = '0.3.4'}

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "scale-info/std",
    "frame-support/std",
]
